# CPL-roulette-client

./: CMakeLists.txt
docs/json_format/: GAME_BEGIN_msg.json  GAME_STATE_msg.json  PLAYER_STATE_msg.json
include/: game.h  game_controller.h  main.h  network_controller.h  network_protocol.h  player.h  ui_composition.h  ui_controller.h
include/ui/: connect_waiting_page.h  home_page.h
src/: game.c  game_controller.c  main.c  network_controller.c  network_protocol.c  player.c  ui_composition.c  ui_controller.c
src/ui/: connect_waiting_page.c  home_page.c  ui_composition.c
